--- a/1.2.html
+++ b/1.2.html
@@ -10,11 +10,13 @@
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
 		/>
+		<link type="image/x-icon" href="favicon.ico" rel="shortcut icon" />
+		<link type="Image/x-icon" href="favicon.ico" rel="icon" />
 	</head>
 	<body>
 		<header>
 			<div id="logo">
-				<span>Mercedes</span>
+				<a href="#top"><img src="favicon-96x96.png" /></a>
 			</div>
 
 			<div id="about">
